<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TextFaw"
        android:textSize="40dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="70dp"
        android:layout_marginHorizontal="40dp">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/dog"/>
        <TextView
            android:id="@+id/PawType1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/TextFawType1"
            android:textSize="25dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginLeft="10dp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/PawTypeVar1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TextFawVar1"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_margin="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="40dp">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/dog"/>
        <TextView
            android:id="@+id/PawType2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/TextFawType2"
            android:textSize="25dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginLeft="10dp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/PawTypeVar2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TextFawVar2"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_margin="20dp"/>

    <Button
        android:id="@+id/buttonSelect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ButtonSelect"
        android:textColor="@color/black"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:textSize="30dp"/>

</LinearLayout>