<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back">

    <TextView
        android:id="@+id/textViewLabel"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity="center"
        android:text="@string/TextTitleMenu"
        android:textSize="40dp"
        android:textColor="@color/black"
        android:layout_marginTop="150dp"
        android:textStyle="bold">
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="left"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="30dp">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/dog" />

        <TextView
            android:id="@+id/textViewToPaw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/TextFaw"
            android:textColor="@color/black"
            android:textSize="30dp"
            android:textStyle="bold">
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="left"
        android:layout_marginLeft="40dp"
        android:layout_marginBottom="30dp">
        <ImageView
            android:layout_height="50dp"
            android:layout_width="50dp"
            android:src="@drawable/dog"/>
        <TextView
            android:id="@+id/textViewToWool"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/TextWool"
            android:textColor="@color/black"
            android:textSize="30dp"
            android:textStyle="bold">
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="left"
        android:layout_marginLeft="40dp"
        android:layout_marginBottom="30dp">
        <ImageView
            android:layout_height="50dp"
            android:layout_width="50dp"
            android:src="@drawable/dog"/>
        <TextView
            android:id="@+id/textViewToTail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/TextTail"
            android:textColor="@color/black"
            android:textSize="30dp"
            android:textStyle="bold">
        </TextView>
    </LinearLayout>

    <Button
        android:id="@+id/buttonRecordVisit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/ButtonDog"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:layout_gravity="center"/>


</LinearLayout>